src/test/ui/stability-attribute/stability-attribute-issue.stderr
error[E0658]: use of unstable library feature 'unstable_test_feature'
  --> $DIR/stability-attribute-issue.rs:10:5
   |
LL |     unstable();
   |     ^^^^^^^^
   |
   = note: for more information, see tracking issue #1
   = help: add #![feature(unstable_test_feature)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'unstable_test_feature': message
  --> $DIR/stability-attribute-issue.rs:12:5
   |
LL |     unstable_msg();
   |     ^^^^^^^^^^^^
   |
   = note: for more information, see tracking issue #2
   = help: add #![feature(unstable_test_feature)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
